syntax = "proto3";

package ddec_networking;

service gnetworking {
    rpc SendValue(SendValueRequest) returns(SendValueResponse) {}
    rpc HealthCheck(HealthCheckRequest) returns(HealthCheckResponse) {}
}


message SendValueRequest {
    bytes tag = 1;
    bytes value = 2;
}

message SendValueResponse {}

message HealthCheckRequest {
    bytes tag = 1;
}

message HealthCheckResponse {}